# telecom-wiki-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CLAUDE.md  deploy.sh  docker-compose.yml  nginx.conf  start.sh
.vercel/: project.json
backend/: .coverage  .env.example  Dockerfile  pyproject.toml  railway.toml  start.sh
backend/app/: config.py  database.py  main.py
backend/app/api/: admin_users.py  auth.py  chunks.py  documents.py  history.py  ingest.py  search.py  settings.py
backend/app/models/: db_models.py  schemas.py
backend/app/modules/: answer_gen.py  chunker.py  image_processor.py  llm_client.py  md_chunker.py  md_exporter.py  noise_remover.py  pdf_parser.py  summary_generator.py  threegpp.py  vector_store.py
backend/app/security/: auth_deps.py  jwt_handler.py
backend/app/services/: storage_service.py
backend/scripts/: create_admin.py
backend/tests/: test_auth.py  test_chunks.py  test_md_chunker.py  test_md_exporter.py  test_pdf_parser.py  test_threegpp.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthKeyPanel.tsx  ChunkCard.tsx  PdfPageViewer.tsx  SourceCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminPage.tsx  ChunkEditorPage.tsx  (+3 more)
preprocessor/: .gitignore  CLAUDE.md  IMAGE_SERVER_SPEC.md  design.md  image-integration-guide.md  requirements.md  start.bat  start.sh  tasks.md  보고자료.md
preprocessor/backend/: .env.example  Dockerfile  pyproject.toml
preprocessor/backend/app/: main.py  models.py
preprocessor/backend/app/api/: documents.py  ingest.py  objects.py  settings.py
preprocessor/backend/app/modules/: api_key_manager.py  image_processor.py  llm_client.py  md_exporter.py  noise_remover.py  parser.py  summary_generator.py  table_processor.py
preprocessor/backend/tests/: test_ingest.py
preprocessor/frontend/: .env.example  .vercelignore  package-lock.json  package.json  vite.config.ts
(+14 files in other folders)
